# please

./: Cargo.toml  README.md
.github/workflows/: dependabot.yml  rust.yml
src/: cli.rs  main.rs
