[package]
name = "please-cli"
version = "0.1.2"
edition = "2021"
description = "Command line LLM query tool and assistant"
authors = ["Kaspar Schleiser <kaspar@schleiser.de>"]
repository = "https://github.com/kaspar030/please"
readme = "README.md"
license = "Apache-2.0"
include = ["src/**/*", "LICENSE", "README.md"]

[dependencies]
anyhow = "1.0.99"
atty = "0.2.14"
camino = "1.1.11"
clap = { version = "4.5.45", features = ["cargo", "env", "derive"] }
openai = "1.0.0-alpha.19"
tokio = "1.47.1"

[[bin]]
name = "please"
path = "src/main.rs"
